--- a/Udacity-deep-learning/gan_mnist/Intro_to_GANs_Solution.ipynb
+++ b/Udacity-deep-learning/gan_mnist/Intro_to_GANs_Solution.ipynb
@@ -215,7 +215,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "tf.reset_default_graph()\n",
@@ -696,7 +698,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.6.1"
   },
   "widgets": {
    "state": {},
